--- a/index.html
+++ b/index.html
@@ -7,23 +7,32 @@
 </head>
 <body>
     <table border="1" width="200">
+        <thead>
+            <th colspan="3">
+                <form action="">
+                    <label>Jogar contra computador:</label><br>
+                    <label><input type="radio" id="cpu" value="1"/>SIM</label><label><input type="radio" id="" value="0"/>NÃO</label> 
+                </form>
+            </th>
+        </thead>
         <tbody>
             <tr>
-                <td><img/></td>
-                <td><img/></td>
-                <td><img/></td>
+                <td><img src="img/transp.png" alt="image" id="c1" onclick="checkjogo(this.id)"/></td>
+                <td><img src="img/transp.png" alt="image" id="c2" onclick="checkjogo(this.id)"/></td>
+                <td><img src="img/transp.png" alt="image" id="c3" onclick="checkjogo(this.id)"/></td>
             </tr>
             <tr>
-                <td><img/></td>
-                <td><img/></td>
-                <td><img/></td>
+                <td><img src="img/transp.png" alt="image" id="c4" onclick="checkjogo(this.id)"/></td>
+                <td><img src="img/transp.png" alt="image" id="c5" onclick="checkjogo(this.id)"/></td>
+                <td><img src="img/transp.png" alt="image" id="c6" onclick="checkjogo(this.id)"/></td>
             </tr>
             <tr>
-                <td><img/></td>
-                <td><img/></td>
-                <td><img/></td>
+                <td><img src="img/transp.png" alt="image" id="c7" onclick="checkjogo(this.id)"/></td>
+                <td><img src="img/transp.png" alt="image" id="c8" onclick="checkjogo(this.id)"/></td>
+                <td><img src="img/transp.png" alt="image" id="c9" onclick="checkjogo(this.id)"/></td>
             </tr>
         </tbody>
     </table>
+    <script type="text/javascript" src="jogo.js"></script>
 </body>
 </html>
