--- a/index.html
+++ b/index.html
@@ -11,25 +11,25 @@
             <th colspan="3">
                 <form action="">
                     <label>Jogar contra computador:</label><br>
-                    <label><input type="radio" id="cpu" value="1"/>SIM</label><label><input type="radio" id="" value="0"/>NÃO</label> 
+                    <label><input type="radio" id="cpu" value="1"/>SIM</label><label><input type="radio" id="modo" name="modof" value="0"/>FACIL</label><label><input type="radio" id="modo" name="modod" value="1"/>DIFICIL</label>
                 </form>
             </th>
         </thead>
         <tbody>
             <tr>
-                <td><img src="img/transp.png" alt="image" id="c1" onclick="checkjogo(this.id)"/></td>
-                <td><img src="img/transp.png" alt="image" id="c2" onclick="checkjogo(this.id)"/></td>
-                <td><img src="img/transp.png" alt="image" id="c3" onclick="checkjogo(this.id)"/></td>
+                <td><img src="img/transp.png" alt="image" id="c1" onclick="return checkjogo(this.id)"/></td>
+                <td><img src="img/transp.png" alt="image" id="c2" onclick="return checkjogo(this.id)"/></td>
+                <td><img src="img/transp.png" alt="image" id="c3" onclick="return checkjogo(this.id)"/></td>
             </tr>
             <tr>
-                <td><img src="img/transp.png" alt="image" id="c4" onclick="checkjogo(this.id)"/></td>
-                <td><img src="img/transp.png" alt="image" id="c5" onclick="checkjogo(this.id)"/></td>
-                <td><img src="img/transp.png" alt="image" id="c6" onclick="checkjogo(this.id)"/></td>
+                <td><img src="img/transp.png" alt="image" id="c4" onclick="return checkjogo(this.id)"/></td>
+                <td><img src="img/transp.png" alt="image" id="c5" onclick="return checkjogo(this.id)"/></td>
+                <td><img src="img/transp.png" alt="image" id="c6" onclick="return checkjogo(this.id)"/></td>
             </tr>
             <tr>
-                <td><img src="img/transp.png" alt="image" id="c7" onclick="checkjogo(this.id)"/></td>
-                <td><img src="img/transp.png" alt="image" id="c8" onclick="checkjogo(this.id)"/></td>
-                <td><img src="img/transp.png" alt="image" id="c9" onclick="checkjogo(this.id)"/></td>
+                <td><img src="img/transp.png" alt="image" id="c7" onclick="return checkjogo(this.id)"/></td>
+                <td><img src="img/transp.png" alt="image" id="c8" onclick="return checkjogo(this.id)"/></td>
+                <td><img src="img/transp.png" alt="image" id="c9" onclick="return checkjogo(this.id)"/></td>
             </tr>
         </tbody>
     </table>
