--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
                 <td><img src="img/transp.png" alt="image" id="c9" onclick="return checkjogo(this.id)"/></td>
             </tr>
         </tbody>
+        <tfoot>
+            <th colspan="3">
+                <button type="button" onclick="reseting()">RESET</button>
+            </th>
+        </tfoot>
     </table>
     <script type="text/javascript" src="jogo.js"></script>
 </body>
