--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header>
             <form action="" align="center">
-                <img src="amongus.png" height="100vh"><br><br><br> 
+                <img src="img/amongus.png" height="100vh"><br><br><br> 
                 <label id="UI">Contra computador: DESATIVADO</label><br><br>
                 <button class="btn btn-three" onclick="easy()" id="butfacil"type="button">FACIL</button>
                 <button class="btn btn-three" onclick="bot()" id="butsim" type="button">SIM</button>
